# wiki.IA

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  conf.py  environment.yml  index.md  pyproject.toml
.github/instructions/: general-use.instructions.md
.github/workflows/: docs.yml  render_pdf.yml  render_pdf_weasyprint.yml
wikiIA/: conf.py  index.md  projects.md  talks.md
wikiIA/_static/: weasyprint_styles.css
wikiIA/sheets/: DIGITAL RIVERSCAPES.md  DIGITAL-RIVERSCAPES.md  EROSION_GUADALQUIVIR.md  IA4WATER.md  INTELIGENTE.md  OEFS-santander-IA.md  PROAS_ALGECIRAS.md  REFCON.md  REFCON_por hacer.md  RiparIAn forests.md  RiparIAn-forests.md  SIMPCCe.md  SOSeas.md  Santander-OEFS-AI.md  Santander_OEFS_AI.md  VIRTUAL RIVERSCAPES.md  WaterTemp.md  flooding.md  project.md  pyteseo.md  tombolo_formation.md  tsusy.md
