[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wikiIA"
authors = [{name = "German Aragon Caminero", email = "german.aragon@unican.es"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "sphinx",
    "myst-nb",
    "sphinx-autoapi",
    "sphinx_rtd_theme"
]

[project.urls]
Home = "https://github.com/IHCantabria/wiki.IA"

